--- a/package.json
+++ b/package.json
@@ -4,22 +4,31 @@
   "description": "A simple game",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tests": "karma start",
+    "watch": "gulp watch",
+    "build": "gulp build"
   },
   "author": "Patrick",
   "license": "ISC",
   "devDependencies": {
     "angular": "^1.5.0",
     "angular-ui-router": "^0.2.18",
+    "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.5.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-jasmine": "^2.3.0",
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.2",
     "gulp-util": "^3.0.7",
-    "vinyl-source-stream": "^1.1.0"
+    "karma": "^0.13.21",
+    "karma-browserify": "^5.0.1",
+    "karma-jasmine": "^0.3.5",
+    "stringify": "^4.0.1",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
   }
 }
