--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple game",
   "main": "index.js",
   "scripts": {
-    "tests": "karma start",
+    "watch-tests": "karma start",
+    "tests": "gulp test",
     "watch": "gulp watch",
     "build": "gulp build"
   },
